Complete UI Outline With Sample Display

--- a/frontend_files/index.html
+++ b/frontend_files/index.html
@@ -104,19 +104,33 @@
 
             <div class="display-data-container">
               <div class="data-wrap-container">
-                <div class="data-item">Stock Name + Ticker</div>
-                <div class="data-item">Market Open</div>
-                <div class="data-item">Daily High</div>
-                <div class="data-item">Daily Low</div>
+                <div class="data-item">
+                  <span>Stock Name + Ticker:</span>
+                  <span>Apple Inc - AAPL</span>
+                </div>
+                <div class="data-item">
+                  <span>Market Open:</span>
+                  <span>$117.35</span>
+                </div>
+                <div class="data-item">
+                  <span>Daily High:</span>
+                  <span>$123.47</span>
+                </div>
+                <div class="data-item">
+                  <span>Daily Low:</span>
+                  <span>$115.66</span>
+                </div>
               </div> <!--data-wrap-container-->
 
               <div class="display-news-container">
                 <div class="article-1">
-                  Article #1
+                  <a href="#">Article #1</a>
+                  <img src="" alt="Image of Article #1">
                 </div> <!--article-1-->
                 
                 <div class="article-2">
-                  Article #2
+                  <a href="#">Article #2</a>
+                  <img src="" alt="Image of Article #2">
                 </div> <!--article-2-->
               </div> <!--display-news-container-->
             </div> <!--display-data-container-->
