--- a/UIManager/index.html
+++ b/UIManager/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>RISE - Real-time stock explorer</title>
     <link rel="stylesheet" href="style.css" />
-    
+    <script></script>
   </head>
   <body>
     <div id="header">
